--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = projectName
-include 'infra'
-include 'core'
+include 'infra:credit-card-infra'
+include 'core:credit-card-core'
+include 'infra:debit-card-infra'
+include 'core:debit-card-core'
 include 'config'
 
